samples/_failures_safe/1761077622_eca45b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6334349a.c: In function ‘main’:
./samples/SAFE/__tmp_6334349a.c:178:5: error: expected declaration or statement at end of input
  178 |     printf("Result: %d\n", result);
      |     ^~~~~~
